# django_graphql

./: .gitignore  pyproject.toml
django_graphql/: asgi.py  settings.py  urls.py
main/: models.py  schemas.py  serializers.py
main/migrations/: 0001_initial.py
