[tool.poetry]
name = "django_graphql"
version = "0.1.0"
description = ""
authors = ["Cindy Liao <cindy.liao@d1g1t.com>"]

[tool.poetry.dependencies]
python = "^3.8"
graphene-django = "^2.15.0"
Django = "^3.2.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
