[tool.poetry]
name = "django_graphql"
version = "0.1.0"
description = ""
authors = ["Cindy Liao <cindy.liao@d1g1t.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.4"
psycopg2-binary = "^2.9.1"
djangorestframework = "^3.12.4"
ariadne = "^0.13.0"
uvicorn = "^0.14.0"
ariadne-django = "^0.2.0"
channels = "^3.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
